# FreeTime

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/debug/: output-metadata.json
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  Sig17Slice.h  colornet.cpp  ndkcamera.cpp  ndkcamera.h  scrfd.cpp  scrfd.h  scrfdncnn.cpp
app/src/main/jni/opencv-mobile-4.6.0-android/sdk/native/jni/: OpenCVConfig.cmake
app/src/main/res/color/: bottom_color_selector.xml
app/src/main/res/drawable/: ic_launcher_background.xml  line.xml  login_shape.xml  register_shape.xml
app/src/main/res/layout/: activity_app_content_teacher.xml  activity_base.xml  activity_change_info.xml  activity_change_password.xml  activity_colorization.xml  activity_course_table.xml  activity_face_import.xml  activity_face_sign.xml  activity_face_sign_select_page.xml  activity_login.xml  activity_main.xml  activity_register.xml  activity_room_reservation.xml  activity_student_app_content.xml  activity_style_transform.xml  activity_super_resolve.xml  activity_word_distinguish.xml  cls_choose.xml  fragment_func.xml  fragment_func_stu.xml  fragment_func_tea.xml  fragment_home.xml  fragment_home_stu.xml  fragment_home_tea.xml  fragment_major_course.xml  fragment_mine.xml  fragment_public_course.xml  item_custom_recycleview.xml  item_view.xml  popue_window.xml  progressbar.xml  room_item_view.xml  sign_detail.xml  style_choos.xml  wheelview.xml
app/src/main/res/menu/: bottom_nav_menu.xml  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
(+137 files in other folders)
